--- a/final_proj.Rmd
+++ b/final_proj.Rmd
@@ -27,7 +27,7 @@ Final deadline : 22/12 to send
 
 <li>Lallallero</li>
 <li>Yuppijayjay schweineback
-
+<li> Eliott smell like pigs
 
 <li>Real world data?</li>
 <li>Added value -> maximize our mark</li>
