--- a/final_proj.Rmd
+++ b/final_proj.Rmd
@@ -13,23 +13,24 @@ knitr::opts_chunk$set(echo = TRUE)
 Final deadline : 22/12 to send
 
 <ol>
-<li> Which extend do we have to explain the theory? (PCA itself and 4 methods for CV)</li>
+<li> Which extend do we have to explain the theory? (PCA itself and 4 methods for CV) -> Kinda introduction to CV on PCA, like to read yourself in order to get familiar, meaningful plots, refer to further informations when just scratching them, explain PCA mehtods and differences</li>
+
+
 
 <li>Implement Artificially turn the unsupervised problem into a supervised one</li>
 <li>Implement Missing data approach -> X must be Gaussian</li>
 <li>Implement Modify the KDE approach</li>
 <li>Implement Use matrix completion, a.k.a. PCA with missing data</li>
-<li>Comparison between those 4 methods on Gaussian data</li>
+<li>Comparison between those 4 methods on Gaussian data - Emphasize on noise, correlation, hyperparameter r, comparing with elbow plots</li>
 
 <li>Rule-of-thumb methods : percentage of variance explained </li>
 <li>Non-automated methods : scree-plot (the elbow plot)
-
 
 <li>Lallallero</li>
 <li>Yuppijayjay schweineback
 <li> Eliott smell like pigs
 
-<li>Real world data?</li>
+<li>Real world data? - Gaussian with (Gaussian) noise</li>
 <li>Added value -> maximize our mark</li>
 
 
