--- a/final_proj.Rmd
+++ b/final_proj.Rmd
@@ -17,14 +17,29 @@ Final deadline : 22/12 to send
 <li>~~To which extend do we have to explain the theory? (PCA itself and 4 methods for CV) -> Kinda introduction to CV on PCA, like to read yourself in order to get familiar, meaningful plots, refer to further informations when just scratching them, explain PCA mehtods and difference~~</li>
 <li>~~Implement Artificially turn the unsupervised problem into a supervised one~~</li>
 <li>~~Implement Missing data approach -> X must be Gaussian~~</li>
-<li>Implement Modify the KDE approach</li>
-<li>Implement Use matrix completion, a.k.a. PCA with missing data</li>
+<li>~~Implement Modify the KDE approach~~</li>
+<li>~~Implement Use matrix completion, a.k.a. PCA with missing data~~</li>
 <li>Comparison between those 4 methods on Gaussian data - Emphasize on noise, correlation, hyperparameter r, comparing with elbow plots</li>
-
 <li>Real world data? - Gaussian with (Gaussian) noise</li>
-
-<li>Incorporate "General Feedback for Small Projects" - Manual 11 </li>
 </ol>
+
+Work for 2.12-4.12:
+
+* Find a multivariate Gaussian Data set
+* Check Methods again
+* Run simulation study on synthesized data (- Emphasize on noise, correlation, hyperparameter r, comparing with elbow plots) - document along the way
+* Rerun simulation study on real data set - document along the way
+* Report:
+  
+  * For **each** method explanation, pseudo-code, simulation & documentation, conclusion
+  * Extend [1.3 Simulation dataset description]
+  * Add a section 1.4 for the real data set and what we want to examine
+  * Overall conclusion
+  * Consider and incorporate "General Feedback for Small Projects" - Manual 11
+  * Read through other parts and note down suggestions and **any** uncerteinty
+  * Ask Masàk next week
+
+
 
 ## 1. Introduction
 
