--- a/final_proj.Rmd
+++ b/final_proj.Rmd
@@ -23,21 +23,30 @@ Final deadline : 22/12 to send
 <li>Real world data? - Gaussian with (Gaussian) noise</li>
 </ol>
 
-Work for 2.12-4.12:
+**Work for 2.12-4.12:**
+
+<span style="color:brown">Emanuele</span>
+<span style="color:orange">Noah</span>
+<span style="color:gray">Eliott</span>
 
 * Find a multivariate Gaussian Data set
-* Check Methods again
-* Run simulation study on synthesized data (- Emphasize on noise, correlation, hyperparameter r, comparing with elbow plots) - document along the way
+* Check Method0 - WrongPCA again <span style="color:orange">Noah</span>
+* Check Method1 - WrongPCAImproved again <span style="color:orange">Noah</span>
+* Check Method2 - MissingData again
+* Check Method3 - KDEApproach again <span style="color:orange">Noah</span>
+* Check Method4 - MatrixCompletion <span style="color:orange">Noah</span>
+* Run simulation study on synthesized data (- Emphasize on noise, correlation, hyperparameter r, comparing with elbow plots, use the same generated data for the different methods) - document along the way
 * Rerun simulation study on real data set - document along the way
 * Report:
   
   * For **each** method explanation, pseudo-code, simulation & documentation, conclusion
-  * Extend [1.3 Simulation dataset description]
+  * Extend [1.3 Simulation dataset description] <span style="color:orange">Noah</span>
   * Add a section 1.4 for the real data set and what we want to examine
+  * I think adding a paragraph add the and combining all the methods for the real data set would be the cleanest way
   * Overall conclusion
-  * Consider and incorporate "General Feedback for Small Projects" - Manual 11
-  * Read through other parts and note down suggestions and **any** uncerteinty
-  * Ask Masàk next week
+  * Consider and incorporate "General Feedback for Small Projects" - Manual 11 (Copied to our github)
+  * Read through other parts and note down suggestions and **any** uncertainties
+  * Ask Masàk next week about those
 
 
 
