--- a/final_proj.Rmd
+++ b/final_proj.Rmd
@@ -70,7 +70,7 @@ knitr::include_graphics('./Figures/PCA_p_2_example.png')
 ```
 
 
-This project will focus on finding the optimal number of principal components ($r$), which dictates a trade-off between the model's complexity and its interpretability. In fact, higher the $r$, higher the explained variance, but less interpretable the dataset. To optimally choose the number of PCs, several techniques have been created, such as the method of percentage of variance explained, using the Scree-plot or Cross-Validation for PCA (described in [2. Cross-validation on PCA methods]).
+This project will focus on finding the optimal number of principal components ($r$), which dictates a trade-off between the model's complexity and its interpretability. In fact, higher the $r$, higher the explained variance, but less interpretable the dataset. To optimally choose the number of PCs, several techniques have been created, such as the method of percentage of variance explained, using the Scree-plot or Cross-validation for PCA (described in [2. Cross-validation on PCA methods]).
 
 The percentage of variance explained method is based on the dataset's covariance matrix, and the percentage of variance vs. the total variability (sum of diagonal entries of the original covariance matrix). When computing the PCs for a given dataset $\mathbf x_1,\ldots,\mathbf x_N \in \mathbb{R}^p$, we create an orthonormal basis with a corresponding diagonal covariance matrix with its entries being the eigenvalues of corresponding PCs. As we sequentially construct the components, the eigenvalues $\lambda_1, \lambda_2, ... ,\lambda_r \in \mathbb{R}$ will be a decreasing function. The method of percentage of variance explained is simply to select the first $r$ components such that $\sum_{i=1}^r \lambda_i > \tau V$ for an arbitrary treshold $\tau$ and a total variability $V = \sum_{i=1}^p \lambda_i$.
 
@@ -82,16 +82,16 @@ knitr::include_graphics('./Figures/scree_plot_example.png')
 The Scree-plot method consists of choosing the value of $r$ which is the elbow of the graph as seen above. In this example, the optimal value of $r$ is $3$.
 
 ### 1.3 Simulation dataset description
-In order to compare different cross-validation methods and the two other methods for finding $r$, the chosen simulation dataset will consist of a centered multivariate Gaussian dataset $\mathbf x_1,\ldots,\mathbf x_N \in \mathbb{R}^p$ with a covariance matrix : ## ADD.
+In order to compare different Cross-validation methods and the two other methods for finding $r$, the chosen simulation dataset will consist of a centered multivariate Gaussian dataset $\mathbf x_1,\ldots,\mathbf x_N \in \mathbb{R}^p$ with a covariance matrix : ## ADD.
 
 This choice of multivariate Gaussian is due to the constraints of implementation for methods described in [2. Cross-validation on PCA methods]. Without certain properties of Gaussian vectors, such as the conditional expectation for the first method would not give us closed form estimators.
 
 ## 2. Cross-validation on PCA methods
 
-```{r, echo=F}
+```{r, echo=F, eval=F}
 # Dataframe as input
 df <- c()
-# Create folds for Cross-Validation
+# Create folds for Cross-validation
 df_df <- data.frame("obs1"=c(5,43,2,3,1,4,8,4,5,9), "obs2"=c(5,6,7,3,9,9,12,1,5,8), "obs3"=c(1,2,5,3,4,5,6,1,5,7), "obs4"=c(1,7,6,3,4,5,6,1,7,10))
 df <- as.matrix(df_df)
 n <- dim(df)[1]
@@ -110,7 +110,7 @@ for (i in 1:K) {
     samples[[i]] <- index
   }
 }
-# Index can now be used to slice df in every step of cross-validation
+# Index can now be used to slice df in every step of Cross-validation
 
 # How is r set? r < p
 r <- 3
@@ -118,22 +118,41 @@ r <- 3
 trunc <- sample(1:p, p-r)
 ```
 
-### 2.1 Artificially turn the unsupervised problem into a supervised one
+### 2.1 Naïve Approach
 
-As described in [Notes 06 - T. Masak](https://htmlpreview.github.io/?https://github.com/TMasak/StatComp/blob/master/Notes/06_CV.html#no.-of-component-selection-for-pca), we can implement the first method as below:
+A widely used approach for Cross-validation in PCA is a method that has the right intentions but fails at a critical point. Imaging sliding down slide with no end. Gravity would make that an endless ride. Same concept is happening here. But due to computational issues the endlessness is adapted to finite. This is due to the fact that this Naïve Approach does not take into account any variance. Let the algorithm as presented in [Notes 06 - T. Masak](https://htmlpreview.github.io/?https://github.com/TMasak/StatComp/blob/master/Notes/06_CV.html#no.-of-component-selection-for-pca) speak for itself. We start with the usual conventions by denoting $X \in \mathbb{R}^{n \times p}$ our data with $n$ observations and $p$ variables:
 
   * split data into $K$ folds $J_1,\ldots,J_K$
-  * **for** $k=1,\ldots,K$
-    - Compute $\hat{\mu}_r$ and $\hat{\Sigma}_r$ (the empirical estimator truncated to rank r) on $X\setminus J_k$.
-    - Split every data point $\mathbf{x}$ belonging to $J_k$ into a "missing" part $\mathbf{x}^{miss}$ that will be used for validation and an "observed" part $\mathbf{x}^{obs}$.
-    - predict the missing part from the observed part using the $\hat{\mu}_r$ and $\hat{\Sigma}_r$ ......
+  * **for** $k=1,\ldots,K$:
+    - solve $\widehat{\mathbf{L}} = \underset{\mathrm{rank}(\mathbf L) = r}{\mathrm{arg\,min}} \|\mathbf X[J_k^c,] -\mathbf L \|_2^2$
+    - calculate $Err_k(r) = \frac{1}{|J_k|}\sum_{m \in J_k} \| x^m - P_{\widehat{\mathbf{L}}} x^m \|_2^2$
   * **end for**
   * choose $\widehat{r} = \underset{r}{\mathrm{arg\,min}} \sum_{k=1}^K Err_k(r)$
 
+A numerical method to solve the least square problem in the top of the algorithm would be to compute the SVD decomposition of $\mathbf X[J_k^c,]$ and truncate the $p-r$ smallest singular values. In order to estimate $\mathbf{x^{m}}, \forall m \in J_k$ with a lower dimensional version we project it by the matrix $P_{\mathbf{\widehat{L}}}$. Where does this matrix come from and how is it computable? To resolve this we took advantage of the R built-in function `prcomp()` the returns us among other objects a basis for the dimension of $\widehat{\mathbf L}$. The promised issue occurs when computing the our error measure without further to-do. Thus the error obviously shrinks when $\widehat{\mathbf L}$ is allowed to have higher dimensions and atteins $0$ when its number of dimensions equals those of the initial data set $\mathbf{X}$.
+
+Indeed
 
 
-```{r, echo=F}
-# Cross-Validation: "Artificially turn the unsupervised problem into a supervised one"
+
+### 2.2 Artificially turn the unsupervised problem into a supervised one
+
+We now want to "correct" the [2.1 Naïve Approach] and artificially induce a Bias-Variance trade-off. As described in [Notes 06 - T. Masak](https://htmlpreview.github.io/?https://github.com/TMasak/StatComp/blob/master/Notes/06_CV.html#no.-of-component-selection-for-pca), we implement this method as below. Let again $\mathbf{X} \in \mathbb{R}^{n \times p}$ be our Gaussian data with $n$ observations and $p$ variables:
+
+  * split data into $K$ folds $J_1,\ldots,J_K$
+  * **for** $k=1,\ldots,K$:
+    - Compute $\hat{\mu}$ and $\hat{\Sigma} := \hat{\Sigma}_r$ (the empirical estimator truncated to rank r) on $\mathbf{X}\setminus J_k$.
+    - Split data points $\mathbf{x}^m\in \mathbb{R}^{p}, m \in J_k$ into a "missing" part $\mathbf{x}_{miss}$ that will be used for validation and an "observed" part $\mathbf{x}_{obs}$ in order to estimate its counterpart$
+    - Predict the missing part from the observed part using the $\hat{\mu}$ and $\hat{\Sigma}_r$
+    - That is compute $\hat{\mathbf{x}}^m_{miss} = \mathbb{E}_{\hat{\mu},\hat{\Sigma}_r}[\mathbf{X}^m_{miss}|\mathbf{X}^m_{obs}=\mathbf{x}^m_{obs}] = \hat{\mu}_{miss} + \hat{\Sigma}_{miss,obs}\hat{\Sigma}^+_{obs,obs}(\mathbf{x}^m_{obs}-\hat{\mu}_{obs})$, where $\hat{\Sigma}^+_{obs,obs}$ is considered the Pseudoinverse of $\hat{\Sigma}_{obs,obs}$ and $\hat{\mu}_{miss},\hat{\mu}_{obs}$ is $\hat{\mu}$ split according to the "missed" and "observed" part
+  * **end for**
+  * choose $\widehat{r} = \underset{r}{\mathrm{arg\,min}} \sum_{k=1}^K Err_k(r)$, where for instance $Err_k(r)$ can be considered as the MSE for every fold $J_k$, e.g. $Err_k(r)=\frac{1}{|J_k|}\sum_{m\in J_k} \|\hat{\mathbf{x}}^m_{miss}-\mathbf{x}^m_{miss}\|^2_2$
+
+Before continuing with our simulations we want to emphasize on some more and some less obvious clues in order to avoid any confusion. When we truncate $\hat{\Sigma}$ to $\hat{\Sigma}_r$ in every fold, we actually take its SVD decomposition and "cut off" its $p-r$ smallest singular values. Hence, we reduce the rank of the covariance of $\mathbf{X}$, but we preserve its dimension which allows us to estimate $\mathbf{x}^m_{miss}$ in the later part of the algorithm. When splitting the observations in every iteration of the for loop, it naturally comes to mind if we should always take the same or a different (random) split. We went for the first possibility as that additional random factor would be negligible by the SLLN. Nevertheless, it makes sense to keep two equally sized parts in order to have a proper estimation basis without overestimating.
+When we estimate $\hat{\mathbf{x}}^m_{miss}$ we use a specific formula that emerges from the law of our data set $\mathbf{X}$. Hence, it is only applicable in this form to Gaussian distributed observations $\mathbf{x} \in \mathbb{R}^p$. The estimation also makes use of the Pseudoinverse of $\hat{\Sigma}_{obs,obs}$ denoted by $\hat{\Sigma}^+_{obs,obs}$. We use this convention in order to avoid singularity conflicts. The Pseudoinverse is easily callable in R by the function `ginv()` embedded in the `MASS` package.
+
+```{r, echo=F, eval=F}
+# Cross-validation: "Artificially turn the unsupervised problem into a supervised one"
 
 # Split data into missing and observed data on jth component
 # e.g. split missing and observed data in half, or split variables randomly
@@ -171,11 +190,11 @@ for (k in 1:K) {
   }
 }
 ```
-### 2.2 Missing data approach
+### 2.3 Missing data approach
 
-```{r, echo=F}
+```{r echo=F, eval=F}
 
-# Cross-Validation: "Missing Data Approach"
+# Cross-validation: "Missing Data Approach"
 
 # Split data into missing and observed data on jth component
 # e.g. split missing and observed data in half, or split variables randomly
@@ -218,10 +237,10 @@ mse2
 ```
 
 
-## 2.3 KDE modified approach
+## 2.4 KDE modified approach
 
 
-## 2.4 Matrix completion method
+## 2.5 Matrix completion method
 
 ## 3. Comparison of CV methods
 
