--- a/final_proj.Rmd
+++ b/final_proj.Rmd
@@ -16,11 +16,11 @@ Final deadline : 22/12 to send
 <ol>
 <li>~~To which extend do we have to explain the theory? (PCA itself and 4 methods for CV) -> Kinda introduction to CV on PCA, like to read yourself in order to get familiar, meaningful plots, refer to further informations when just scratching them, explain PCA mehtods and difference~~</li>
 <li>~~Implement Artificially turn the unsupervised problem into a supervised one~~</li>
-<li>~~Implement Missing data approach -> X must be Gaussian~~</li>
+<li>~~Implement Missing data approach (X must be Gaussian)~~</li>
 <li>~~Implement Modify the KDE approach~~</li>
 <li>~~Implement Use matrix completion, a.k.a. PCA with missing data~~</li>
-<li>Comparison between those 4 methods on Gaussian data - Emphasize on noise, correlation, hyperparameter r, comparing with elbow plots</li>
-<li>Real world data? - Gaussian with (Gaussian) noise</li>
+<li>~~Comparison between those 4 methods on Gaussian data - Emphasize on noise, correlation, hyperparameter r, comparing with elbow plots~~</li>
+<li>~~Real world data? - Gaussian with (Gaussian) noise~~ (no accessible multivariate data set on real world data)</li>
 </ol>
 
 **Work for 2.12-4.12:**
@@ -34,20 +34,31 @@ Final deadline : 22/12 to send
 * ~~Check Method1 - WrongPCAImproved again <span style="color:orange">Noah</span>~~ DONE
 * Check Method2 - MissingData again <span style="color:gray">Eliott</span>
 * Check Method3 - KDEApproach again <span style="color:brown">Emanuele</span>
-* >~~Check Method4 - MatrixCompletion <span style="color:gray">Eliott</span>>~~ A verifier avec le prof car pas super clair sur certains points
+* ~~Check Method4 - MatrixCompletion <span style="color:gray">Eliott</span>~~ A verifier avec le prof car pas super clair sur certains points
 * Run simulation study on synthesized data (- Emphasize on noise, correlation, hyperparameter r, comparing with elbow plots, use the same generated data for the different methods) - document along the way <span style="color:orange">Noah</span>, <span style="color:gray">Eliott</span>
-* Rerun simulation study on real data set - document along the way <span style="color:orange">Noah</span>, <span style="color:gray">Eliott</span>
+
 * Report:
   
   * For **each** method explanation, pseudo-code, simulation & documentation, conclusion <span style="color:orange">Noah</span>, <span style="color:gray">Eliott</span>, <span style="color:brown">Emanuele</span>
   * Extend [1.3 Simulation dataset description] <span style="color:gray">Eliott</span>
-  * Add a section 1.4 for the real data set and what we want to examine  <span style="color:brown">Emanuele</span>
-  * I think adding a paragraph add the and combining all the methods for the real data set at the would be the cleanest way and a nice tranisition for the overall conclusion afterwards
   * Overall conclusion
+
+  
+* Polishing:
+
+  * Find multivariate gaussian real data
+    * Implement and comment on it
+    * Add a data section (1.4) for the real data set
   * Consider and incorporate "General Feedback for Small Projects" - Manual 11 (Copied to our github)
   * Read through other parts and note down suggestions and **any** uncertainties
   * Ask Masàk next week about those
 
+
+* Questions:
+  
+  * Missing Data: Singularity issues in l_comp?
+  * Q or l_comp for convergence
+  * C is sigma from previous loop?
 
 
 ## 1. Introduction
