--- a/final_proj.Rmd
+++ b/final_proj.Rmd
@@ -57,8 +57,13 @@ Final deadline : 22/12 to send
 * Questions:
   
   * Missing Data: Singularity issues in l_comp?
-  * Q or l_comp for convergence
-  * C is sigma from previous loop?
+  * Missing Data: Q or l_comp for convergence
+  * Missing Data: C is sigma from previous loop?
+  * Missing Data: mu_l or mu_l-1?
+  * KDE-Approach: Correct?
+  * MatrixCompletion: Tolerance and CV
+  * MatrixCompletion: To what extent does noise influnence -_-
+ 
 
 
 ## 1. Introduction
@@ -93,7 +98,12 @@ knitr::include_graphics('./Figures/scree_plot_example.png')
 The Scree-plot method consists of choosing the value of $r$ which is the elbow of the graph as seen above. In this example, the optimal value of $r$ is $3$.
 
 ### 1.3 Simulation dataset description
-In order to compare different Cross-validation methods and the two other methods for finding $r$, the chosen simulation dataset will consist of a centered multivariate Gaussian dataset $\mathbf x_1,\ldots,\mathbf x_N \in \mathbb{R}^p$ with a covariance matrix defined as below : ## ADD.
+
+After the end of [2. Cross-validation on PCA methods] we will be equipped with multiple approaches that will enable us to recover the best amount of dimensions. Intuitively, every method must have its different advantages and draw backs.
+In order to get a better feeling on how our Cross-Validation methods behave in different circumstances, we will run a simulation study on a variety of synthesized data sets and try to cover a good variety of covariance matrices. This will enable us to discover the limits of the different methods used and allow us to conclude and recommend different Algorithms with respect to its underlying data. 
+As by construction of our Alogirthms and every single one of them besides the [2.1 Naïve Approach], the [2.5 Matrix completion method] they are only applicable to Multivariate Gaussian distributed data. There we will restrict ourselves to this special distribution and create our synthesized data in order to get meaningful results. All in all we will consider 8 different data sets and compare the outcome of our 5 Algorithms on every single one of them.
+
+for finding $r$, the chosen simulation data set et will consist of a centered multivariate Gaussian data set $\mathbf x_1,\ldots,\mathbf x_N \in \mathbb{R}^p$ with a covariance matrix defined as below : ## ADD.
 
 
 This choice of multivariate Gaussian is due to the constraints of implementation for methods described in [2. Cross-validation on PCA methods]. Without certain properties of Gaussian vectors, such as the expression conditional expectation from missed data given observed data (as seen in [2.2 Artificially turn the unsupervised problem into a supervised one]), certain methods would not be usable.
