--- a/final_proj.Rmd
+++ b/final_proj.Rmd
@@ -250,7 +250,7 @@ mse2
 
 
 ### 2.4 KDE modified approach
-This approach is a modfication of the KDE  method. We want to minimize over the rank $R$ this formula $\mathbb{E} \| \widehat{C}_R - C \|_2^2 = \mathbb{E}\| \widehat{C}_R \| - 2 \mathbb{E} \langle \widehat{C}_R, C \rangle + \| C \|_2^2$ with $\widehat{C}_R$ being the the truncated estimator having rank $R$.
+This approach is a modfication of the KDE  method. We want to minimize over the rank $R$ this formula $\mathbb{E} \| \widehat{C}_R - C \|_2^2 = \mathbb{E}\| \widehat{C}_R \| - 2 \mathbb{E} \langle \widehat{C}_R, C \rangle + \| C \|_2^2$ with $\widehat{C}_R$ being the truncated estimator having rank $R$.
 Assuming that the mean is zero we, in our modification we'll get:
 $$
 \mathbb{E} \langle \widehat{C}_R^{(-n)}, X_n X_n^\top \rangle = \langle \underbrace{\mathbb{E}[ \widehat{C}_R^{(-n)}}_{\approx \mathbb{E} \widehat{C}_R}], \underbrace{\mathbb{E} [X_n X_n^\top}_{ = C}] \rangle \approx \mathbb{E} \langle \widehat{C}_R , X_n X_n^\top \rangle
@@ -320,5 +320,8 @@ This optimization method gives us the best matrix $\mathbf M$ with rank $R$ with
 ### 4.2 Scree-plot method (non-automatic)
 
 ### 4.3 Comparison with CV methods
+In regression methods and other similar techniques, the goal of CV is monitoring overfitting and calibrating hyperparameters. If we have a large amount of predictors, we would usually add regularization to the model.
+Therefore, we can use CV to tune model hyperparameters (e.g. $\lambda$ in LASSO). PCA also has an important hyperparameter to evaluate: the number of components in the model.  In a common way, many cluster analysis models require to choose the amount of clusters before fitting the model. Viewed from the perspective of matrix factorization, these are very similar problems.
+
 
 ## 5. Conclusion
